--- a/MazeDemo.vcxproj
+++ b/MazeDemo.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="maze.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="maze.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
