已经分好的代码

--- a/MazeDemo.vcxproj
+++ b/MazeDemo.vcxproj
@@ -130,7 +130,9 @@
     <ClCompile Include="maze.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="base.h" />
     <ClInclude Include="maze.h" />
+    <ClInclude Include="stkpas.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
