--- a/MazeDemo.vcxproj.filters
+++ b/MazeDemo.vcxproj.filters
@@ -20,6 +20,12 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="base.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="stkpas.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
     <ClInclude Include="maze.h">
       <Filter>头文件</Filter>
     </ClInclude>
